# dm-plugin-manager

./: README.md  package-lock.json  package.json  release-notes.txt  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  dm-plugins.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: dm-plugins.json
src-tauri/src/: lib.rs
src-tauri/src/controllers/: mod_plugin_controller.rs  plugin_controller.rs
src-tauri/src/controllers/mod_plugin_controller/: mod_plugin_service.rs
src-tauri/src/controllers/plugin_controller/: create_plugins_service.rs  delete_plugins_service.rs  get_plugins_service.rs  utils.rs
src-tauri/src/models/: mod_platform.rs  plugin_format.rs  plugins.rs
src-tauri/src/services/: russh_service.rs  ssh_service.rs  zip_service.rs
src/components/: Button.tsx  Checkbox.tsx  CheckboxList.tsx  Dialog.tsx  DropZone.tsx  Navigation.tsx  RadioButton.tsx  RadioButtonList.tsx
src/components/AppUpdater/: ProgressBar.tsx  index.tsx
src/components/Navigation/: DefaultNavigation.tsx  SmallNavigation.tsx  index.tsx
src/components/Toasts/: Toast.tsx  index.tsx
src/contexts/: PluginContextProvider.tsx  ToastContextProvider.tsx
src/contexts/ToastContextProvider/: toastReducer.ts
src/hooks/: useBreakPoint.ts  useBrowserSupport.ts  useDebounce.ts  usePersistedState.ts  usePluginContext.ts  useScreenSize.ts  useToast.ts  useToastContext.ts
src/models/: plugins.ts
src/pages/: HomePage.tsx  ModPluginManager.tsx  PluginManager.tsx  PluginManagerError.tsx  PluginManagerPage1.tsx  PluginManagerPage2.tsx  PluginManagerSuccess.tsx
src/pages/HomePage/: DisconnectedMod.tsx  Plugin.tsx  UnsupportedBrowser.tsx
src/pages/ModPluginManager/: DisconnectedMod.tsx  (+2 more)
src/utils/: commaJoin.ts  mergeRefs.ts
(+13 files in other folders)
