[package]
name = "mod-plugin-manager"
version = "0.1.0"
description = "MOD plugin manager"
authors = ["Dave Mollen"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.5", features = [] }
tauri-plugin-log = "2.0.0-rc"
thiserror = "1.0.63"
russh = "0.45.0"
async-trait = "0.1.81"
tokio = "1.39.3"
reqwest = "0.12.7"
tar = "0.4.41"
futures = "0.3.30"
dirs = "5.0.1"
